Se agrega validacion del orden